welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:8: error: '<-' expected but ')' found.
  for (j<=0 to i-1){
                  ^arrayFront9:14: error: illegal start of simple expression
}
^